2009-03-18  Sam Weinig  <sam@webkit.org>

        Reviewed by Simon Fraser.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=23966
        REGRESSION: Custom arrow navigation functionality doesn't work at dropular.net
        <rdar://problem/6589657>

        Match the CSSOM spec for getClientRects and getBoundingClientRect by
        returning a 0x0 rect at the correct top/left position for empty inline
        boxes.

        * rendering/RenderInline.cpp:
        (WebCore::RenderInline::absoluteRects):
        (WebCore::RenderInline::absoluteQuads):

2009-03-18  David Levin  <levin@chromium.org>

        Reviewed by Eric Seidel.

        Match the changes done for windows in the bug
        https://bugs.webkit.org/show_bug.cgi?id=24530.

        No change in behavior, so no test.

        * rendering/RenderThemeChromiumLinux.cpp:
        (WebCore::RenderThemeChromiumLinux::extraDefaultStyleSheet):

2009-03-18  Dirk Schulze  <krit@webkit.org>

        Reviewed by Holger Freyther.

        Added support for SVG's stroked texts to Qt.

        [Qt] SVGs stroked text support missing
        https://bugs.webkit.org/show_bug.cgi?id=24262

        * platform/graphics/qt/FontQt.cpp:
        (WebCore::Font::drawComplexText):

2009-03-18  Mark Rowe  <mrowe@apple.com>

        Reviewed by Alexey Proskuryakov.

        Fix fast/encoding/char-decoding.html with recent ICU.

        * platform/text/TextCodecICU.cpp:
        (WebCore::TextCodecICU::decode): Look for gb18030 case-insensitively,
        as newer versions of ICU use GB18030 as the canonical name.

2009-03-17  David Levin  <levin@chromium.org>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=24662
        Chromium build fixes.

        Bug https://bugs.webkit.org/show_bug.cgi?id=24663 tracks
        the invalid implementation of ScriptCallStack.

        No change in behavior, so no test.

        * bindings/v8/ScriptCallStack.h: