@@ -1,3 +1,14 @@
+2009-03-18  David Levin  <levin@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        https://bugs.webkit.org/show_bug.cgi?id=24664
+        Upstreaming v8 collection.h
+
+        No change in behavior, so no test.
+
+        * bindings/v8/V8Collection.h: Added.
+
 2009-03-18  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Simon Fraser.
